--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kapilsinghnegi.github.io/RoboFriends",
   "dependencies": {
     "@testing-library/jest-dom": "^6.3.0",
     "@testing-library/react": "^14.1.2",
@@ -10,13 +11,16 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "tachyons": "^4.12.0",
+    "typescript": "^5.3.3",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
